fix map dots style on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ p {
   line-height: 1.75;
 }
 
+ul li {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
 .bigger {
     font-size: 1.2em;
 }
@@ -48,33 +54,73 @@ header p {
 
 #headline-logo {
     width: 100px;
+    margin-top: -1.8em;
     margin-bottom: 2em;
 }
 
-#map {
+ul#map {
     background: center center url('../img/czech-republic-blind-map.png') no-repeat;
-    width: 100%;
     height: 342px;
     margin-bottom: .5em;
+    position: relative;
 }
 
-#map .city {
+ul#map li {
+    display: block;
     position: absolute;
     text-align: center;
     font-size: 1.4em;
 }
 
-#map .city a {
+#map li a {
     line-height: 1em;
     font-size: 1.5em;
 }
 
-#map .prague {
-    margin: 3em 0 0 20.7em;
+ul#map li.prague {
+    right: 600px;
+    bottom: 170px;
 }
 
-#map .brno {
-    margin: 6.1em 0 0 28em;
+ul#map li.brno {
+    right: 455px;
+    bottom: 100px;
+}
+
+@media (max-width: 1200px) {
+    ul#map li.prague {
+        right: 500px;
+        bottom: 170px;
+    }
+
+    ul#map li.brno {
+        right: 355px;
+        bottom: 100px;
+    }
+}
+
+@media (max-width: 992px) {
+    ul#map li.prague {
+        right: 380px;
+        bottom: 170px;
+    }
+
+    ul#map li.brno {
+        right: 235px;
+        bottom: 100px;
+    }
+}
+
+@media (max-width: 768px) {
+    ul#map li.prague {
+        right: 290px;
+        bottom: 170px;
+    }
+
+    ul#map li.brno {
+        right: 145px;
+        bottom: 100px;
+    }
 }
 
 #map .date {
@@ -108,25 +154,25 @@ header {
     -o-background-size: cover;
 }
 
-@media (min-width: 768px) {
-  header .intro-text {
+header .intro-text {
     padding-top: 5em;
     padding-bottom: 5em;
-  }
+}
 
-  header .intro-text .intro-lead-in {
+header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: 'Exo 2', sans-serif;
     font-size: 40px;
-    line-height: 40px; }
+    line-height: 40px;
+}
 
-  header .intro-text .intro-heading {
+header .intro-text .intro-heading {
     margin-bottom: 50px;
     text-transform: uppercase;
     font-family: 'Exo 2', sans-serif;
     font-size: 75px;
-    font-weight: 700;
-    line-height: .8em; } }
+    line-height: 1.3em;
+}
 
 .section {
     padding: 3em 0;
